# Datify

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  cliff.toml  package.json
backend/: Cargo.toml  openapi.json  rustfmt.toml
backend/migrations/: 001_create_users.sql  002_create_projects.sql  003_create_databases.sql  004_add_database_container_fields.sql  005_create_api_keys.sql  006_add_database_public_exposed.sql  007_create_metrics_history.sql  008_create_revoked_tokens.sql  009_add_branch_fields.sql  010_add_valkey_support.sql  011_add_redis_support.sql  012_add_kv_metrics_support.sql  013_create_audit_logs.sql  014_remove_user_name.sql
backend/src/: lib.rs  main.rs  openapi.rs
backend/src/api/: mod.rs
backend/src/api/extractors/: auth.rs  mod.rs  pagination.rs
backend/src/api/handlers/: audit_logs.rs  auth.rs  config.rs  databases.rs  health.rs  kv.rs  logs.rs  metrics.rs  mod.rs  projects.rs  sql.rs  system.rs  terminal.rs  user_admin.rs
backend/src/api/routes/: mod.rs
backend/src/config/: settings.rs
backend/src/domain/models/: api_key.rs  audit_log.rs  config.rs  database.rs  kv.rs  logs.rs  metrics.rs  mod.rs  project.rs  sql.rs  user.rs
backend/src/domain/services/: audit_log.rs  auth.rs  database.rs  metrics.rs  mod.rs  project.rs  sql.rs
backend/src/domain/services/metrics/: mod.rs  postgres.rs  redis.rs  service.rs
backend/src/error/: mod.rs
backend/src/infrastructure/: metrics_collector.rs  mod.rs
backend/src/infrastructure/docker/: manager.rs  mod.rs
backend/src/infrastructure/docker/containers/: mod.rs  postgres.rs  redis.rs  (+1 more)
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs
backend/src/repositories/: api_key.rs  audit_log.rs  database.rs  metrics.rs  mod.rs  project.rs  token.rs  user.rs
backend/src/utils/: hash.rs
(+114 files in other folders)
