[package]
name = "datify"
version = "0.1.0"
edition = "2021"
authors = ["Datify Contributors"]
description = "Self-hosted database branching platform - an open-source alternative to Neon"
license = "MIT"
repository = "https://github.com/datify/datify"
keywords = ["database", "postgres", "branching", "neon", "zfs"]
categories = ["database", "development-tools"]

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "timeout", "fs"] }

utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
bytes = "1"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate", "chrono", "uuid"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }

bollard = "0.20"

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
validator = { version = "0.18", features = ["derive"] }
aes-gcm = "0.10"
hex = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
once_cell = "1"
dashmap = "6"
base64 = "0.22"
slug = "0.1"
dotenvy = "0.15"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
